Closed
Bug 1381376
Opened 7 years ago
Closed 7 years ago
background video doesn't get resumed when turning off the pref "media.suspend-bkgnd-video.enabled"
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
RESOLVED
FIXED
mozilla56
Tracking | Status | |
---|---|---|
firefox56 | --- | fixed |
People
(Reporter: alwu, Assigned: alwu)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
STR.
1. go to about:config,
make sure "media.suspend-bkgnd-video.enabled" is TRUE
set "media.suspend-bkgnd-video.delay-ms" to ZERO
- it can reduce waiting time because it forces suspending video immediately once the tab goes background
2. open a new tab, going to Youtube and playing arbitrary video
3. put the Youtube tab on background, switch to "about:config" tab
4. set "media.suspend-bkgnd-video.enabled" to FALSE
5. switch back to Youtube tab
Expect.
6. Both video and audio are playing
Actual.
6. The video is suspended, and audio is still playing
Assignee | ||
Updated•7 years ago
|
Assignee: nobody → alwu
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Comment 3•7 years ago
|
||
mozreview-review |
Comment on attachment 8886997 [details]
Bug 1381376 - only suspend decoding when the pref is on.
https://reviewboard.mozilla.org/r/157760/#review163342
Attachment #8886997 -
Flags: review?(jwwang) → review+
Updated•7 years ago
|
Summary: background video doesn't be resumed when turn off the pref "media.suspend-bkgnd-video.enabled" → background video doesn't get resumed when turning off the pref "media.suspend-bkgnd-video.enabled"
Comment 4•7 years ago
|
||
Ideally, we should resume video decoding immediately when the pref is switched off without waiting for the tab to go to the foreground. Feel free to open a new bug if you want more improvement.
Assignee | ||
Comment 5•7 years ago
|
||
Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7d0caa2e93d7
only suspend decoding when the pref is on. r=jwwang
Comment 7•7 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox56:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in
before you can comment on or make changes to this bug.
Description
•