Bug 1381376 - only suspend decoding when the pref is on. r=jwwang

Only suspend decoding when the pref is on, but resuming could be done when the
pref is off.

MozReview-Commit-ID: JDh1pRXNhc8

--HG--
extra : rebase_source : 1a075c9eff5abe0eae7bd929d9c632d5b49a63be